--- a/serverless.yml
+++ b/serverless.yml
@@ -80,6 +80,10 @@ functions:
           parameters:
             paths:
               channel_id: true
+      - http:
+          path: items
+          method: delete
+          cors: true
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
