delete single item by id

--- a/serverless.yml
+++ b/serverless.yml
@@ -85,6 +85,11 @@ functions:
           method: delete
           cors: true
 
+      - http:
+          path: items/{id}
+          method: delete
+          cors: true
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
