require id and message_id for single item deletion

--- a/serverless.yml
+++ b/serverless.yml
@@ -92,7 +92,7 @@ functions:
           cors: true
 
       - http:
-          path: items/{id}
+          path: items/{id}/{message_id}
           method: delete
           cors: true
 
